added imgs of cards and created cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,67 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    
+    <h1 class="game-title">Memory</h1>
+    <!-- Space here for keeping track of the player pairs -->
+    <section class="player-pairs">
+        <h2>Pairs:</h2>
+    </section>
+    <!-- This is the main player area that holds the cards -->
+    <!-- Board will consist of 12 cards total. -->
+<!-- [] Create board using SVG imgs -->
+<!-- [] Give each card a front and back img -->
+<!-- [] Create the flipping on click mechanic -->
+<!-- [] STRETCH GOAL: add "Casino" music as the background -->
+    <section class="main-game-board">
+        <div class="card">
+            <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/four of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/four of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/jack of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/jack of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/two of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/two of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/king of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/king of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/queen of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+        <div class="card">
+            <img class ="front-face"src="/imgs/queen of spades.svg" alt="">
+            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+        </div>
+    </section>
 
     <script src="/script.js"></script>
 </body>
