--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1 class="game-title">Memory</h1>
+    <img  class="title-img" src="/imgs/RoyalFlush.svg" alt="">
+    <!-- <h1 class="game-title">Memory!</h1> -->
     <!-- Space here for keeping track of the player pairs -->
     <section class="player-pairs">
         <h2>Pairs:</h2>
@@ -70,6 +71,9 @@
         </div>
     </section>
 
+    <section>
+        <a href="#" class="new-game-btn">New Game</a>
+    </section>
     <script src="/script.js"></script>
 </body>
 </html>
