added the 3d flip effect

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </section>
     <!-- This is the main player area that holds the cards -->
     <!-- Board will consist of 12 cards total. -->
-<!-- [] Create board using SVG imgs -->
-<!-- [] Give each card a front and back img -->
+<!-- [x] Create board using SVG imgs -->
+<!-- [x] Give each card a front and back img -->
 <!-- [] Create the flipping on click mechanic -->
 <!-- [] STRETCH GOAL: add "Casino" music as the background -->
     <section class="main-game-board">
