--- a/index.html
+++ b/index.html
@@ -21,51 +21,51 @@
 <!-- [] Create the flipping on click mechanic -->
 <!-- [] STRETCH GOAL: add "Casino" music as the background -->
     <section class="main-game-board">
-        <div class="card">
+        <div class="card" data-card="ace">
             <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="ace">
             <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="four">
             <img class ="front-face"src="/imgs/four of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="four">
             <img class ="front-face"src="/imgs/four of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="jack">
             <img class ="front-face"src="/imgs/jack of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="jack">
             <img class ="front-face"src="/imgs/jack of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="two">
             <img class ="front-face"src="/imgs/two of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="two">
             <img class ="front-face"src="/imgs/two of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="king">
             <img class ="front-face"src="/imgs/king of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="king">
             <img class ="front-face"src="/imgs/king of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="queen">
             <img class ="front-face"src="/imgs/queen of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
-        <div class="card">
+        <div class="card" data-card="queen">
             <img class ="front-face"src="/imgs/queen of spades.svg" alt="">
             <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
         </div>
