--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- <h1 class="game-title">Memory!</h1> -->
     <!-- Space here for keeping track of the player pairs -->
     <section class="player-pairs">
-        <h2>Pairs:</h2>
+        <h2></h2>
     </section>
     <!-- This is the main player area that holds the cards -->
     <!-- Board will consist of 12 cards total. -->
 <!-- [x] Create board using SVG imgs -->
 <!-- [x] Give each card a front and back img -->
-<!-- [] Create the flipping on click mechanic -->
+<!-- [x] Create the flipping on click mechanic -->
 <!-- [] STRETCH GOAL: add "Casino" music as the background -->
     <section class="main-game-board">
         <div class="card" data-card="ace">
