bug fixes and adjustments

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <section>
-        <a href="#" class="new-game-btn">New Game</a>
+        <a href="#" class="new-game-btn" onClick="window.location.reload()">New Game</a>
     </section>
     <script src="/script.js"></script>
 </body>
