changed paths to absolute as a test

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project One</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img  class="title-img" src="/imgs/RoyalFlush.svg" alt="">
+    <img  class="title-img" src="imgs/RoyalFlush.svg" alt="">
     <!-- <h1 class="game-title">Memory!</h1> -->
     <!-- Space here for keeping track of the player pairs -->
     <section class="player-pairs">
@@ -22,8 +22,8 @@
 <!-- [] STRETCH GOAL: add "Casino" music as the background -->
     <section class="main-game-board">
         <div class="card" data-card="ace">
-            <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/ace of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="ace">
             <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
