updated all paths to absolute

--- a/index.html
+++ b/index.html
@@ -26,54 +26,54 @@
             <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="ace">
-            <img class ="front-face"src="/imgs/ace of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/ace of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="four">
-            <img class ="front-face"src="/imgs/four of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/four of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="four">
-            <img class ="front-face"src="/imgs/four of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/four of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="jack">
-            <img class ="front-face"src="/imgs/jack of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/jack of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="jack">
-            <img class ="front-face"src="/imgs/jack of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/jack of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="two">
-            <img class ="front-face"src="/imgs/two of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/two of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="two">
-            <img class ="front-face"src="/imgs/two of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/two of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="king">
-            <img class ="front-face"src="/imgs/king of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/king of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="king">
-            <img class ="front-face"src="/imgs/king of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/king of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="queen">
-            <img class ="front-face"src="/imgs/queen of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/queen of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
         <div class="card" data-card="queen">
-            <img class ="front-face"src="/imgs/queen of spades.svg" alt="">
-            <img class ="back-face"src="/imgs/card back red grid.svg" alt="">
+            <img class ="front-face"src="imgs/queen of spades.svg" alt="">
+            <img class ="back-face"src="imgs/card back red grid.svg" alt="">
         </div>
     </section>
 
     <section>
         <a href="#" class="new-game-btn" onClick="window.location.reload()">New Game</a>
     </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
